arm_sve2/ms2/output/output-10145.err
run_regblock_ms2.cpp: In function ‘int main(int, char**)’:
run_regblock_ms2.cpp:820:40: error: ‘omp_time’ was not declared in this scope; did you mean ‘mktime’?
  820 |         printf("Openmp Time = %.5g\n", omp_time);
      |                                        ^~~~~~~~
      |                                        mktime
slurmstepd: error: execve(): /home/slee/project/arm_sve2/ms2/./conv_layer: No such file or directory
srun: error: ss01-gh01: task 0: Exited with exit code 2
slurmstepd: error: execve(): /home/slee/project/arm_sve2/ms2/./conv_layer: No such file or directory
srun: error: ss01-gh01: task 0: Exited with exit code 2
slurmstepd: error: execve(): /home/slee/project/arm_sve2/ms2/./conv_layer: No such file or directory
srun: error: ss01-gh01: task 0: Exited with exit code 2
srun: error: ss01-gh01: task 0: Exited with exit code 2
slurmstepd: error: execve(): /home/slee/project/arm_sve2/ms2/./conv_layer: No such file or directory
srun: error: ss01-gh01: task 0: Exited with exit code 2
slurmstepd: error: execve(): /home/slee/project/arm_sve2/ms2/./conv_layer: No such file or directory
slurmstepd: error: execve(): /home/slee/project/arm_sve2/ms2/./conv_layer: No such file or directory
srun: error: ss01-gh01: task 0: Exited with exit code 2
slurmstepd: error: execve(): /home/slee/project/arm_sve2/ms2/./conv_layer: No such file or directory
srun: error: ss01-gh01: task 0: Exited with exit code 2
slurmstepd: error: execve(): /home/slee/project/arm_sve2/ms2/./conv_layer: No such file or directory
srun: error: ss01-gh01: task 0: Exited with exit code 2
slurmstepd: error: execve(): /home/slee/project/arm_sve2/ms2/./conv_layer: No such file or directory
srun: error: ss01-gh01: task 0: Exited with exit code 2
slurmstepd: error: execve(): /home/slee/project/arm_sve2/ms2/./conv_layer: No such file or directory
srun: error: ss01-gh01: task 0: Exited with exit code 2
srun: error: ss01-gh01: task 0: Exited with exit code 2
slurmstepd: error: execve(): /home/slee/project/arm_sve2/ms2/./conv_layer: No such file or directory
slurmstepd: error: execve(): /home/slee/project/arm_sve2/ms2/./conv_layer: No such file or directory
srun: error: ss01-gh01: task 0: Exited with exit code 2
srun: error: ss01-gh01: task 0: Exited with exit code 2
slurmstepd: error: execve(): /home/slee/project/arm_sve2/ms2/./conv_layer: No such file or directory
slurmstepd: error: execve(): /home/slee/project/arm_sve2/ms2/./conv_layer: No such file or directory
srun: error: ss01-gh01: task 0: Exited with exit code 2
slurmstepd: error: execve(): /home/slee/project/arm_sve2/ms2/./conv_layer: No such file or directory
srun: error: ss01-gh01: task 0: Exited with exit code 2
slurmstepd: error: execve(): /home/slee/project/arm_sve2/ms2/./conv_layer: No such file or directory
srun: error: ss01-gh01: task 0: Exited with exit code 2
slurmstepd: error: execve(): /home/slee/project/arm_sve2/ms2/./conv_layer: No such file or directory
srun: error: ss01-gh01: task 0: Exited with exit code 2
slurmstepd: error: execve(): /home/slee/project/arm_sve2/ms2/./conv_layer: No such file or directory
srun: error: ss01-gh01: task 0: Exited with exit code 2
slurmstepd: error: execve(): /home/slee/project/arm_sve2/ms2/./conv_layer: No such file or directory
srun: error: ss01-gh01: task 0: Exited with exit code 2
srun: error: ss01-gh01: task 0: Exited with exit code 2
slurmstepd: error: execve(): /home/slee/project/arm_sve2/ms2/./conv_layer: No such file or directory
rm: cannot remove 'conv_layer': No such file or directory
